chore: added docker and docker scripts to the project, added conditional building for swagger

--- a/package.json
+++ b/package.json
@@ -17,7 +17,16 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "docker:up": "docker compose up --build -d",
+    "docker:down": "docker compose down",
+    "docker:restart": "docker compose restart",
+    "docker:logs": "docker compose logs -f",
+    "docker:rebuild": "npm run docker:down && npm run docker:up",
+    "db:create": "ts-node ./node_modules/typeorm-extension/bin/cli.cjs db:create",
+    "db:drop": "ts-node ./node_modules/typeorm-extension/bin/cli.cjs db:drop",
+    "db:seed": "ts-node ./node_modules/typeorm-extension/bin/cli.cjs seed:run",
+    "db:reset": "npm run db:drop && npm run db:create && npm run db:seed"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
